--- a/Nancy.Metadata.Swagger/Nancy.Metadata.Swagger.csproj
+++ b/Nancy.Metadata.Swagger/Nancy.Metadata.Swagger.csproj
@@ -15,6 +15,7 @@
     <AssemblyVersion>0.1.0.0</AssemblyVersion>
     <FileVersion>0.1.0.0</FileVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Copyright>2018</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
