Added skip commits of markdown files to appveyor yml.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,3 +12,7 @@ build_script:
   - cmd: dotnet publish ./src/Nancy.Metadata.Swagger.csproj
 artifacts:
   - path: '**\*.nupkg'
+skip_commits:
+  files:
+    - '**/*.md'
+
