--- a/src/Nancy.Metadata.Swagger.csproj
+++ b/src/Nancy.Metadata.Swagger.csproj
@@ -3,15 +3,15 @@
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
     <Version>0.1.1</Version>
-    <PackageId>Nancy.Metadata.Swagger.AspNetCore</PackageId>
+    <PackageId>Nancy.Metadata.Swagger.Core</PackageId>
     <Authors>Jaxel Rojas;Anton Kudryavtsev</Authors>
-    <Title>Nancy.Metadata.Swagger.AspNetCore</Title>
-    <Product>Nancy.Metadata.Swagger.AspNetCore</Product>
+    <Title>Nancy.Metadata.Swagger.Core</Title>
+    <Product>Nancy.Metadata.Swagger.Core</Product>
     <Description>This is a port of the Nancy.Metadata.Swagger lib for Netstandard 1.6 functioning with nancy 2.+</Description>
     <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
     <PackageTags>nancyfx;swagger</PackageTags>
-    <RepositoryUrl>https://github.com/Jaxelr/Nancy.Metadata.Swagger.AspNetCore</RepositoryUrl>
-    <PackageProjectUrl>https://github.com/Jaxelr/Nancy.Metadata.Swagger.AspNetCore</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Jaxelr/Nancy.Metadata.Swagger.Core</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/Jaxelr/Nancy.Metadata.Swagger.Core</PackageProjectUrl>
     <AssemblyVersion>0.1.1.0</AssemblyVersion>
     <FileVersion>0.1.1.0</FileVersion>
     <PackageVersion>0.1.1</PackageVersion>
@@ -21,6 +21,8 @@
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <NeutralLanguage></NeutralLanguage>
     <Company />
+    <RootNamespace>Nancy.Metadata.Swagger</RootNamespace>
+    <AssemblyName>Nancy.Metadata.Swagger</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
