--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,4 +14,11 @@ artifacts:
 skip_commits:
   files:
     - '**/*.md'
-
+deploy:
+- provider: NuGet
+  server: https://www.myget.org/F/nancy-metadata-swagger/api/v2/package
+  on:
+    branch: master  
+  api_key:
+    secure: 6xhHSsDvB9arsrSDLuynnbxaVS+BwaoJU96RfQenc5FOnUYvP8SHM6kbvrmpvja2
+  skip_symbols: true
