--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: '0.1.1.{build}'
+version: '0.1.2.{build}'
 image: Visual Studio 2017
 branches:
   only:
@@ -8,7 +8,8 @@ init:
 before_build:
   - cmd: dotnet --version
 build_script:
-  - cmd: dotnet publish ./src/Nancy.Metadata.Swagger.csproj -v quiet
+  - cmd: dotnet build ./src/Nancy.Metadata.Swagger.csproj -v quiet
+  - cmd: dotnet publish ./src/Nancy.Metadata.Swagger.csproj -v quiet -f=netstandard1.6
 artifacts:
   - path: '**\*.nupkg'
 skip_commits:
