Update samples to working versions. Updated readme with myget resource. Added configuration release to the appveyor.yml file.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,8 @@ branches:
   - master
 init:
   - cmd: git config --global core.autocrlf true
+configuration:
+  - Release
 before_build:
   - cmd: dotnet --version
 build_script:
