Added appveyor_repo_tag true to appveyor.yml.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,6 +22,7 @@ deploy:
   server: https://www.myget.org/F/nancy-metadata-swagger/api/v2/package
   on:
     branch: master  
+    appveyor_repo_tag: true
   api_key:
     secure: 6xhHSsDvB9arsrSDLuynnbxaVS+BwaoJU96RfQenc5FOnUYvP8SHM6kbvrmpvja2
   skip_symbols: true
