--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,8 @@ init:
   - cmd: git config --global core.autocrlf true
 configuration:
   - Release
+nuget:
+  disable_publish_on_pr: true
 before_build:
   - cmd: dotnet --version
 build_script:
