--- a/samples/Nancy.Metadata.Swagger.DemoApplication.csproj
+++ b/samples/Nancy.Metadata.Swagger.DemoApplication.csproj
@@ -11,7 +11,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Nancy.Metadata.Swagger.csproj" />
+    <ProjectReference Include="..\src\Nancy.Metadata.Swagger.csproj" />
   </ItemGroup>
 
 </Project>
