--- a/src/Nancy.Metadata.Swagger.csproj
+++ b/src/Nancy.Metadata.Swagger.csproj
@@ -11,6 +11,7 @@
     <PackageTags>nancyfx;swagger</PackageTags>
     <RepositoryUrl>https://github.com/Jaxelr/Nancy.Metadata.Swagger.Core</RepositoryUrl>
     <PackageProjectUrl>https://github.com/Jaxelr/Nancy.Metadata.Swagger.Core</PackageProjectUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/Jaxelr/Nancy.Metadata.Swagger.Core/master/icon.png</PackageIconUrl>
     <AssemblyVersion>0.3.1</AssemblyVersion>
     <FileVersion>0.3.1</FileVersion>
     <PackageVersion>0.3.1</PackageVersion>
