--- a/samples/Nancy.Metadata.Swagger.DemoApplication.csproj
+++ b/samples/Nancy.Metadata.Swagger.DemoApplication.csproj
@@ -1,10 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFrameworks>netcoreapp2.2;netcoreapp3.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" />
+
     <PackageReference Include="Nancy" Version="2.0.0" />
     <PackageReference Include="Nancy.Metadata.Modules" Version="2.0.0" />
     <PackageReference Include="Nancy.Validation.FluentValidation" Version="2.0.0" />
@@ -14,4 +13,11 @@
     <ProjectReference Include="..\src\Nancy.Metadata.Swagger.csproj" />
   </ItemGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.2'">
+    <PackageReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
+    <PackageReference Include="Microsoft.AspnetCore.Owin" Version="3.0.0" />
+  </ItemGroup>
 </Project>
