feat: added samples targeting net framework 4.6.2.

--- a/samples/Nancy.Metadata.Swagger.DemoApplication/Nancy.Metadata.Swagger.DemoApplication.csproj
+++ b/samples/Nancy.Metadata.Swagger.DemoApplication/Nancy.Metadata.Swagger.DemoApplication.csproj
@@ -10,6 +10,6 @@
     <PackageReference Include="Microsoft.AspnetCore.Owin" Version="3.1.2" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\src\Nancy.Metadata.Swagger.csproj" />
+    <ProjectReference Include="..\..\src\Nancy.Metadata.Swagger.csproj" />
   </ItemGroup>
 </Project>
